--- a/kitty.conf
+++ b/kitty.conf
@@ -9,6 +9,8 @@ font_size 12.0
 
 include ./kitty-themes/themes/gruvbox_dark.conf
 
+notify_on_cmd_finish unfocused 20
+
 # Attach to existing tmux session on login, fallback to new tmux session
 # shell zsh --login -c "tmux attach || tmux"
 
