set mouse hide wait to -3

--- a/kitty.conf
+++ b/kitty.conf
@@ -9,6 +9,7 @@ font_size 12.0
 
 include ./kitty-themes/themes/gruvbox_dark.conf
 
+mouse_hide_wait	-3.0
 scrollback_lines	10000
 
 notify_on_cmd_finish unfocused 20
