--- a/kitty.conf
+++ b/kitty.conf
@@ -14,6 +14,10 @@ scrollback_lines	10000
 
 notify_on_cmd_finish unfocused 20
 
+# Fix word movements on macOS
+map alt+left send_text all \x1b\x62 # Backward
+map alt+right send_text all \x1b\x66 # Forward
+
 # Attach to existing tmux session on login, fallback to new tmux session
 # shell zsh --login -c "tmux attach || tmux"
 
