--- a/kitty.conf
+++ b/kitty.conf
@@ -15,8 +15,8 @@ scrollback_lines	10000
 notify_on_cmd_finish unfocused 20
 
 # Fix word movements on macOS
-map alt+left send_text all \x1b\x62 # Backward
-map alt+right send_text all \x1b\x66 # Forward
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
 
 # Attach to existing tmux session on login, fallback to new tmux session
 # shell zsh --login -c "tmux attach || tmux"
